fixed covers margin on home

--- a/src/app/home/home-item/home-item.component.css
+++ b/src/app/home/home-item/home-item.component.css
@@ -4,7 +4,6 @@
   left: 0;
   top: 0;
   bottom: 0;
-  margin: 2px;
 }
 
 .cover-background-child {
@@ -14,6 +13,7 @@
   color: white;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
 
 h1 {
